# review-api

./: .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
migrations/2022-10-09-233456_add_users/: up.sql
migrations/2022-11-05-031908_add_reviews/: down.sql  up.sql
migrations/2023-02-19-070154_add_seasons/: down.sql  up.sql
migrations/2023-05-30-203606_use timezone/: down.sql  up.sql
src/: constants.rs  errors.rs  handlers.rs  main.rs  models.rs  pagination.rs  schema.rs  utils.rs
src/actions/: mod.rs  reviews.rs  users.rs
src/handlers/: auth.rs  keys.rs  review.rs  reviews.rs  search.rs  users.rs
