[package]
name = "review-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.5"
r2d2 = "0.8.10"
serde = "1.0.145"
chrono = { version = "0.4.22", features=["serde", "clock"] }
rust-argon2 = "1.0"
lazy_static = "1.4.0"
rand = "0.8.5"
actix-session = { version = "0.7.2", features= ["redis-rs-session"] }
actix-identity = "0.5.2"
serde_json = "1.0.87"
awc = { version = "3.0.1", features= ["openssl"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
serde_urlencoded = "0.7.1"
openssl-probe = "0.1.5"
